src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_less_than_without_space_not_env_path.snap
---
source: src/regression_tests/format.rs
description: let a = 1; b = 2; in a<b
---
let
  a = 1;
  b = 2;
in
a < b
