src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_operator_trailing_comment_hoisted.snap
---
source: src/regression_tests/format.rs
description: "\"a\" +  # comment\n\"b\""
---
"a"
# comment
+ "b"
