src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_paren_with_comment_not_absorbed-3.snap
---
source: src/regression_tests/format.rs
description: "{ o = (/* lua */ ''print(1)\nx''); }"
---
{
  o = (/* lua */ ''
    print(1)
    x'');
}
