src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_paren_with_comment_not_absorbed.snap
---
source: src/regression_tests/format.rs
description: "{ o = ( # c\n ''\n \"\n ''); }"
---
{
  o = (
    # c
    ''
      "
    ''
  );
}
