src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_pipe_chain_forces_newlines-4.snap
---
source: src/regression_tests/format.rs
description: "{ pipeExample = 1 |> (n: n + 1) |> (n: n + 1) |> (n: n + 1); }"
---
{
  pipeExample =
    1
    |> (n: n + 1)
    |> (n: n + 1)
    |> (n: n + 1);
}
