src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_set_param_lambda_absorbed-2.snap
---
source: src/regression_tests/format.rs
description: "{ machine = { pkgs, ... }:\n  { x = 1; }; }"
---
{
  machine =
    { pkgs, ... }:
    {
      x = 1;
    };
}
