src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_set_param_lambda_absorbed-3.snap
---
source: src/regression_tests/format.rs
description: "{ f = { a, b, c }: { x = 1; }; }"
---
{
  f =
    {
      a,
      b,
      c,
    }:
    {
      x = 1;
    };
}
