src/regression_tests/snapshots/nixfmt_rs__regression_tests__format__format_set_param_lambda_absorbed-4.snap
---
source: src/regression_tests/format.rs
description: "{ f = { a ? 1 }: { x = 1; }; }"
---
{
  f =
    {
      a ? 1,
    }:
    {
      x = 1;
    };
}
